# castnow-desktop-rs

./: .gitignore  Cargo.toml  README.md
src/: Unsaved 1.glade  Unsaved 1.glade~  castnow.rs  command.rs  launcher.rs  main.rs  shell.rs  state.rs  ui.glade  ui.glade~  ui.rs
src/ui/: glade.rs  handlers.rs  mod.rs  sandbox.txt  ui.glade  ui.glade~  ui_state.rs  widgets.rs
